# msfs-mod-manager

./: .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  app.py  build.ps1  format.ps1  pyproject.toml  test.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: debug.yml  main.yml  release.yml
app/: main.py
app/assets/: fs_style.qss
app/dialogs/: about.py  error.py  information.py  mod_info.py  progress.py  success.py  version_check.py  versions_info.py  warning.py
app/lib/: config.py  files.py  flightsim.py  helpers.py  thread.py  versions.py
app/widgets/: base_table.py  files_table.py  main_widget.py  main_window.py  mod_info_widget.py  mod_table.py
scripts/: README.md  build.ps1  build.py  files.txt.example  flap_lift_fix.py  format.ps1  installer.nsi  lint.ps1
src/main/python/: main.py
src/main/python/dialogs/: about.py  about_dialog.py  error.py  error_dialogs.py  information.py  information_dialogs.py  progress.py  question_dialogs.py  success.py  version_check.py  version_check_dialog.py  versions_info.py  warning.py  warning_dialogs.py
src/main/python/lib/: config.py  files.py  flight_sim.py  flightsim.py  get_version.py  helpers.py  mods.py  resize.py  theme.py  thread.py  thread_wait.py  type_helper.py  types.py  version.py  versions.py
src/main/python/widgets/: about_widget.py  base_table.py  files_table.py  info_widget.py  main_table.py  main_widget.py  main_window.py  mod_info_widet.py  mod_info_widget.py  mod_table.py  progress_widget.py  version_check_widget.py  versions_widget.py
src/main/resources/base/: base.json  fs_style.qss
