[tool.poetry]
    name        = "MSFS Mod Manager"
    version     = "2.0.0"
    description = "External mod manager for the new Microsoft Flight Simulator"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]
    license     = "GPL-3.0-or-later"
    readme      = "README.md"
    homepage    = "https://github.com/NathanVaughn/msfs-mod-manager"
    repository  = "https://github.com/NathanVaughn/msfs-mod-manager"

[tool.poetry.dependencies]
    python  = ">=3.9,<3.10"
    loguru  = "^0.6.0"
    patool  = "^1.12"
    PySide6 = "<=6.2.1" # 6.2.2 introduces bug that makes our threads stop working

[tool.poetry.dev-dependencies]
    autoflake   = "^1.4"
    black       = "^21.6b0"
    isort       = "^5.9.1"
    pyinstaller = "^4.8"

[[tool.poetry.source]]
    name    = "mypypi"
    url     = "https://pypi.nthnv.me/simple"
    default = true

[build-system]
    requires      = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool.isort]
    profile = "black"
